--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/vite": "^4.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
