--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.2.0",
-    "react-swipeable": "^7.0.2"
+    "react-slick": "^0.30.3",
+    "react-swipeable": "^7.0.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
